--- a/Análise_Descritiva.ipynb
+++ b/Análise_Descritiva.ipynb
@@ -1145,7 +1145,7 @@
       "source": [
         "> ### Conclusões\n",
         "\n",
-        "Podemos ver pelo gráfico de barras que a maioria da população se concentra na classe C e a minoria na classe A."
+        "Podemos ver pelo gráfico de barras que a maioria da população se concentra na classe E e a minoria na classe A."
       ]
     },
     {
